force-app/main/default/objects/AppPageSection__c/AppPageSection__c.object-meta.xml
<CustomObject>
    <label>AppPageSection</label>
    <nameField>
        <label>Page</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppPageSections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>