force-app/main/default/objects/AppPageSection__c/fields/PageSectionName__c.field-meta.xml
<CustomField>
    <fullName>PageSectionName__c</fullName>
    <formula>Name  &amp; '-' &amp;  Page_Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page Section Name</label>
    <type>Text</type>
</CustomField>