force-app/main/default/objects/AppPageSection__c/fields/Section_Icon__c.field-meta.xml
<CustomField>
    <fullName>Section_Icon__c</fullName>
    <label>Section Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>